--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera cambio en cabecera
+                Cabecera cambio en cabecera cambio en el ssh
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post es es el cambio en master</h1>
